# Python-KontAKTOCRScreen

./: README.md  pyproject.toml  sandbox.py
robot_framework/: config.py  process.py  reset.py  screening.py
