[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.1.0"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 3.*",
    "oomtm @ git+https://github.com/mtm-aarhus/oomtm.git@main",
    "requests >= 2.31",
    "PyMuPDF >= 1.24",
    "pytesseract >= 0.3.10",
    "Pillow >= 10.0",
]
# NOTE: text is read from each PDF's own text layer where present (most converted
# Office documents have one). OCR of scanned / image-only pages additionally needs
# the Tesseract binary on the worker, with the Danish (dan) and English (eng)
# language data installed. Point at it with the TESSERACT_PATH env var, or have
# `tesseract` on PATH. If Tesseract is missing, scanned pages are skipped with a
# logged warning (the result's `ocr_used` flag stays false) rather than failing.

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
